Major update: Modernize import's on all notebooks, so that 1. "from blah import *" are replaced with "from blah import a,b,...", where a,b,... are actually needed, and 2. add a comment for each import.

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -251,7 +251,7 @@
    ],
    "source": [
     "import sympy as sp               # SymPy, Python's core symbolic algebra package on which NRPy+ depends\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import lhrh         # NRPy+: Core C code output module\n",
     "import NRPy_param_funcs as par   # NRPy+: parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
