--- a/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
+++ b/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
@@ -68,9 +68,9 @@
    "outputs": [],
    "source": [
     "# Step 1: Initialize needed Python/NRPy+ modules \n",
-    "from outputC import *             # NRPy+: Core C code output module\n",
-    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import os, sys                    # Standard Python modules for multiplatform OS-level functions\n",
+    "from outputC import outputC   # NRPy+: Core C code output module\n",
+    "import sympy as sp            # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import os, sys                # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
     "# Step 1.a: Set maximum l to which we will validate the spin-weighted spherical harmonics with s=-2:\n",
     "maximum_l = 4 # Note that we have validated against Mathematica up to and including l=8 -- perfect agreement."
@@ -225,7 +225,7 @@
      "text": [
       "\n",
       "\n",
-      " ### BEGIN VALIDATION TESTS ###\n",
+      "### BEGIN VALIDATION TESTS ###\n",
       "VALIDATION TEST PASSED on file: SpinWeight_minus2_SphHarmonics/SpinWeight_minus2_SphHarmonics.h\n",
       "### END VALIDATION TESTS ###\n"
      ]
@@ -235,7 +235,7 @@
     "import SpinWeight_minus2_SphHarmonics.SpinWeight_minus2_SphHarmonics as swm2\n",
     "swm2.SpinWeight_minus2_SphHarmonics(maximum_l=4,filename=os.path.join(\"SpinWeight_minus2_SphHarmonics\",\"SpinWeight_minus2_SphHarmonics-NRPymodule.h\"))\n",
     "\n",
-    "print(\"\\n\\n ### BEGIN VALIDATION TESTS ###\")\n",
+    "print(\"\\n\\n### BEGIN VALIDATION TESTS ###\")\n",
     "import filecmp\n",
     "fileprefix = os.path.join(\"SpinWeight_minus2_SphHarmonics\",\"SpinWeight_minus2_SphHarmonics\")\n",
     "if filecmp.cmp(fileprefix+\"-NRPymodule.h\",fileprefix+\".h\") == False:\n",
