--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import lhrh,outC_function_dict,outCfunction # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
@@ -788,12 +788,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BlackHoleID_Ccodes/Initial_Data_Playground.c -o Initial_Data_Playground -lm`...\n",
-      "(BENCH): Finished executing in 1.8129053115844727 seconds.\n",
+      "(BENCH): Finished executing in 1.8116533756256104 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Initial_Data_Playground 96 96 96`...\n",
-      "(BENCH): Finished executing in 0.20943021774291992 seconds.\n",
+      "(BENCH): Finished executing in 0.21006560325622559 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Initial_Data_Playground 48 48 48`...\n",
-      "(BENCH): Finished executing in 0.20937228202819824 seconds.\n"
+      "(BENCH): Finished executing in 0.20941758155822754 seconds.\n"
      ]
     }
    ],
@@ -829,8 +829,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: scipy in /home/zetienne/jup38/lib/python3.8/site-packages (1.4.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/zetienne/jup38/lib/python3.8/site-packages (from scipy) (1.18.4)\n"
+      "Requirement already satisfied: scipy in /home/zetienne/jup38/lib/python3.8/site-packages (1.4.1)\r\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/zetienne/jup38/lib/python3.8/site-packages (from scipy) (1.18.4)\r\n"
      ]
     }
    ],
