--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -114,14 +114,14 @@
     "EvolOption = \"low resolution\"\n",
     "\n",
     "# Step P1: Import needed NRPy+ core modules:\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
-    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
-    "import shutil, os, sys, time     # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
+    "from outputC import lhrh,outCfunction,outC_function_dict # NRPy+: Core C code output module\n",
+    "import finite_difference as fin        # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par         # NRPy+: Parameter interface\n",
+    "import grid as gri                     # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp               # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm         # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd           # NRPy+: Multi-platform Python command-line interface\n",
+    "import shutil, os, sys, time           # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
     "\n",
     "# Step P2: Create C code output directory:\n",
     "Ccodesdir = os.path.join(\"BSSN_Two_BHs_Collide_Ccodes/\")\n",
@@ -338,7 +338,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 4.0567216873168945 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 4.2477076053619385 seconds.\n"
      ]
     }
    ],
@@ -552,7 +552,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for psi4...\n",
-      "(BENCH) Finished psi4 symbolic expressions in 16.387373208999634 seconds.\n",
+      "(BENCH) Finished psi4 symbolic expressions in 17.025201559066772 seconds.\n",
       "Output C function psi4() to file BSSN_Two_BHs_Collide_Ccodes/psi4.h\n"
      ]
     }
@@ -910,8 +910,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for psi4_re_pt0 in SinhSpherical coordinates.Generating C code for psi4_re_pt1 in SinhSpherical coordinates.Generating C code for psi4_re_pt2 in SinhSpherical coordinates.Generating C code for psi4_im_pt0 in SinhSpherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for psi4_im_pt2 in SinhSpherical coordinates.Generating C code for psi4_im_pt1 in SinhSpherical coordinates.Generating C code for Ricci tensor in SinhSpherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in SinhSpherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "\n",
+      "Generating C code for psi4_re_pt2 in SinhSpherical coordinates.Generating C code for psi4_im_pt2 in SinhSpherical coordinates.Generating C code for psi4_re_pt0 in SinhSpherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for psi4_im_pt1 in SinhSpherical coordinates.Generating C code for psi4_im_pt0 in SinhSpherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for psi4_re_pt1 in SinhSpherical coordinates.Generating C code for BSSN RHSs in SinhSpherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for Ricci tensor in SinhSpherical coordinates.\n",
       "\n",
       "\n",
       "\n",
@@ -922,20 +922,20 @@
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.10906982421875 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt1 in 11.294487953186035 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt2 in 14.474667072296143 seconds.\n",
-      "(BENCH) Finished BL initial data codegen in 15.245231628417969 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.08798885345458984 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt1 in 11.246705293655396 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt2 in 14.573024272918701 seconds.\n",
+      "(BENCH) Finished BL initial data codegen in 15.236380577087402 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 18.257636785507202 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt2 in 19.113916397094727 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 18.48550295829773 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt2 in 19.333853721618652 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 20.282382011413574 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt1 in 20.843085527420044 seconds.\n",
-      "(BENCH) Finished generating psi4_im_pt0 in 35.405029296875 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 20.364257335662842 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt1 in 20.587154150009155 seconds.\n",
+      "(BENCH) Finished generating psi4_im_pt0 in 35.64708161354065 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 36.29890775680542 seconds.\n",
-      "(BENCH) Finished generating psi4_re_pt0 in 60.18843865394592 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 36.55345177650452 seconds.\n",
+      "(BENCH) Finished generating psi4_re_pt0 in 59.50402760505676 seconds.\n"
      ]
     }
    ],
@@ -1445,17 +1445,17 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BrillLindquist_Playground -lm`...\n",
-      "(BENCH): Finished executing in 9.021850824356079 seconds.\n",
+      "(BENCH): Finished executing in 8.825215101242065 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 9.031831979751587 seconds.\n",
+      "(BENCH) Finished in 8.836114883422852 seconds.\n",
       "\n",
       "\n",
       "Now running. Should take ~30 minutes...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 270 8 2 1.0`...\n",
-      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 2935.58 | gp/s 1.92e+066\n",
-      "(BENCH): Finished executing in 245.36065363883972 seconds.\n",
-      "(BENCH) Finished in 245.37566304206848 seconds.\n",
+      "\u001b[2KIt: 27200 t=199.93 dt=7.35e-03 | 100.0%; ETA 0 s | t/h 1664.81 | gp/s 1.09e+066It: 520 t=3.82 dt=7.35e-03 | 1.9%; ETA 261 s | t/h 2708.47 | gp/s 1.77e+06\n",
+      "(BENCH): Finished executing in 432.5965917110443 seconds.\n",
+      "(BENCH) Finished in 432.61297965049744 seconds.\n",
       "\n",
       "\n"
      ]
