--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -106,14 +106,14 @@
    "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
-    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
-    "import shutil, os, sys, time     # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
+    "from outputC import lhrh,outCfunction,outC_function_dict # NRPy+: Core C code output module\n",
+    "import finite_difference as fin        # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par         # NRPy+: Parameter interface\n",
+    "import grid as gri                     # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp               # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm         # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd           # NRPy+: Multi-platform Python command-line interface\n",
+    "import shutil, os, sys, time           # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
     "\n",
     "# Step P2: Create C code output directory:\n",
     "Ccodesdir = os.path.join(\"BSSN_Two_BHs_Collide_Ccodes/\")\n",
@@ -322,7 +322,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 3.773908853530884 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 3.770317554473877 seconds.\n"
      ]
     }
    ],
@@ -542,20 +542,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.Generating C code for Ricci tensor in Spherical coordinates.\n",
+      "Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.10689783096313477 seconds.\n",
-      "(BENCH) Finished BL initial data codegen in 7.384269952774048 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.10916757583618164 seconds.\n",
+      "(BENCH) Finished BL initial data codegen in 7.3176350593566895 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 8.87956428527832 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 8.83189058303833 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 13.445544719696045 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 13.367599725723267 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 26.243619203567505 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 26.71885061264038 seconds.\n"
      ]
     }
    ],
@@ -1078,14 +1078,14 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "(BENCH): Finished executing in 4.017084360122681 seconds.\n",
+      "(BENCH): Finished executing in 4.016282081604004 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 28641.71 | gp/s 4.03e+06\n",
-      "(BENCH): Finished executing in 1.0096735954284668 seconds.\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 18145.43 | gp/s 2.56e+06\n",
+      "(BENCH): Finished executing in 1.6126563549041748 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 9281.86 | gp/s 4.13e+06\n",
-      "(BENCH): Finished executing in 3.014619827270508 seconds.\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 8836.40 | gp/s 3.93e+06\n",
+      "(BENCH): Finished executing in 3.2146787643432617 seconds.\n",
       "(BENCH) Finished this code cell.\n"
      ]
     }
