--- a/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
+++ b/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
@@ -34,16 +34,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-2*M*a*xx0*(-2*M*a*xx0*sqrt((-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)/(a**2*cos(xx1)**2 + xx0**2))*sqrt(sqrt(4*M*(a**2*cos(xx1)**2 + xx0**2)**2*(-2*M*xx0 + a**2 + xx0**2)*(-2*M*a**2*r_at_max_density + a**2*r_at_max_density**2 - a*sqrt(M*r_at_max_density)*(-a**2 + r_at_max_density**2) + r_at_max_density**4)**2/(r_at_max_density**3*(-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)**2*(-3*M*r_at_max_density + 2*a*sqrt(M*r_at_max_density) + r_at_max_density**2)**2*sin(xx1)**2) + 1)/2 - 1/2)*Abs(sin(xx1))/(-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2) - sqrt((-2*M*xx0 + a**2 + xx0**2)/(-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2))*sqrt(a**2*cos(xx1)**2 + xx0**2)*sqrt(sqrt(4*M*(a**2*cos(xx1)**2 + xx0**2)**2*(-2*M*xx0 + a**2 + xx0**2)*(-2*M*a**2*r_at_max_density + a**2*r_at_max_density**2 - a*sqrt(M*r_at_max_density)*(-a**2 + r_at_max_density**2) + r_at_max_density**4)**2/(r_at_max_density**3*(-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)**2*(-3*M*r_at_max_density + 2*a*sqrt(M*r_at_max_density) + r_at_max_density**2)**2*sin(xx1)**2) + 1)/2 + 1/2))/((a**2*cos(xx1)**2 + xx0**2)*(-2*M*xx0 + a**2 + xx0**2)) + sqrt((-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)/(a**2*cos(xx1)**2 + xx0**2))*(-4*M**2*a**2*xx0**2/((a**2*cos(xx1)**2 + xx0**2)*(-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)*(-2*M*xx0 + a**2 + xx0**2)) + (a**2*cos(xx1)**2 + xx0**2)/((-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)*sin(xx1)**2))*sqrt(sqrt(4*M*(a**2*cos(xx1)**2 + xx0**2)**2*(-2*M*xx0 + a**2 + xx0**2)*(-2*M*a**2*r_at_max_density + a**2*r_at_max_density**2 - a*sqrt(M*r_at_max_density)*(-a**2 + r_at_max_density**2) + r_at_max_density**4)**2/(r_at_max_density**3*(-a**2*(-2*M*xx0 + a**2 + xx0**2)*sin(xx1)**2 + (a**2 + xx0**2)**2)**2*(-3*M*r_at_max_density + 2*a*sqrt(M*r_at_max_density) + r_at_max_density**2)**2*sin(xx1)**2) + 1)/2 - 1/2)*Abs(sin(xx1))\n",
       "Wrote to file \"FishboneMoncriefID/FM_standalone.h\"\n"
      ]
     }
    ],
    "source": [
-    "import sympy as sp\n",
-    "from outputC import *\n",
-    "import indexedexp as ixp\n",
-    "import finite_difference as fin\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "from outputC import lhrh         # NRPy+: Core C code output module\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import FishboneMoncriefID.FishboneMoncriefID as fmid\n",
     "\n",
     "# Step 1: Set up the Fishbone-Moncrief initial data. This sets all the ID gridfunctions.\n",
@@ -84,7 +83,7 @@
     "                     lhrh(lhs=\"uBL4U2\",rhs=fmid.uBL4U[2]),\\\n",
     "                     lhrh(lhs=\"uBL4U3\",rhs=fmid.uBL4U[3])\n",
     "                     ]\n",
-    "print(fmid.uKS4U[3])\n",
+    "# print(fmid.uKS4U[3])\n",
     "fin.FD_outputC(\"FishboneMoncriefID/FM_standalone.h\",FishboneMoncrief_to_print,params=\"outCverbose=False,CSE_enable=False\")"
    ]
   },
@@ -97,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/FM_standalone.c\n"
+      "Overwriting FishboneMoncriefID/FM_standalone.c\n"
      ]
     }
    ],
@@ -181,17 +180,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-27 22:52:21--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\n",
-      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\n",
-      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 16445 (16K) [text/csv]\n",
-      "Saving to: ‘torus_cuts.csv’\n",
-      "\n",
-      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \n",
-      "\n",
-      "2020-05-27 22:52:21 (1.28 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\n",
-      "\n"
+      "--2020-05-29 10:07:52--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\r\n",
+      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\r\n",
+      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\r\n",
+      "HTTP request sent, awaiting response... 200 OK\r\n",
+      "Length: 16445 (16K) [text/csv]\r\n",
+      "Saving to: ‘torus_cuts.csv’\r\n",
+      "\r\n",
+      "\r",
+      "torus_cuts.csv        0%[                    ]       0  --.-KB/s               \r",
+      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.009s  \r\n",
+      "\r\n",
+      "2020-05-29 10:07:52 (1.78 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\r\n",
+      "\r\n"
      ]
     },
     {
@@ -245,7 +246,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "import sympy as sp\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import mpmath as mp\n",
     "import csv\n",
