--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -78,12 +78,10 @@
    "outputs": [],
    "source": [
     "# Step P0: Load needed modules\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "from outputC import *\n",
-    "import reference_metric as rfm\n",
+    "import sympy as sp             # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import NRPy_param_funcs as par # NRPy+: Parameter interface\n",
+    "import indexedexp as ixp       # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear as AtoB\n",
     "\n",
     "# All gridfunctions will be written in terms of spherical coordinates (r, th, ph):\n",
     "r,th,ph = sp.symbols('r th ph', real=True)\n",
@@ -426,14 +424,11 @@
     }
    ],
    "source": [
-    "# Reset the list of gridfunctions, as registering a gridfunction\n",
-    "#   twice will spawn an error.\n",
-    "gri.glb_gridfcs_list = []\n",
-    "\n",
-    "# First we import needed core NRPy+ modules\n",
-    "import reference_metric as rfm\n",
-    "import grid as gri\n",
-    "# Unused, but needed because BrillLindquist() also does tensor rescalings.\n",
+    "# First we import reference_metric, which is\n",
+    "#   needed since BSSN.ShiftedKerrSchild calls \n",
+    "#   BSSN.ADM_Exact_Spherical_or_Cartesian_to_BSSNCurvilinear, which\n",
+    "#   depends on reference_metric:\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "rfm.reference_metric()\n",
     "\n",
     "import BSSN.ShiftedKerrSchild as sks\n",
