--- a/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
+++ b/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Step P1: import all needed modules from NRPy+:\n",
-    "from outputC import *             # NRPy+: Core C code output module\n",
+    "from outputC import nrpyAbs,lhrh,outCfunction # NRPy+: Core C code output module\n",
     "import finite_difference as fin   # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par    # NRPy+: parameter interface\n",
     "import grid as gri                # NRPy+: Functions having to do with numerical grids\n",
