--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "## This module is designed to interpolate arbitrary quantities on [Einstein Toolkit](https://einsteintoolkit.org/) Adaptive-Mesh Refinement (AMR) grids (using the [Carpet](https://carpetcode.org/) AMR infrastructure) to numerical grids with arbitrary sampling.\n",
     "\n",
-    "**Notebook Status:** <font color='red'><b> In progress</b></font>\n",
+    "**Validation Status:** <font color='red'><b> In progress</b></font>\n",
     "\n",
     "**Validation Notes:** This module is currently undergoing validation testing.\n",
     "\n",
@@ -698,13 +698,13 @@
    "outputs": [],
    "source": [
     "# Step 1: Import needed NRPy+ parameters\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import loop\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "from outputC import lhrh         # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import loop as lp                # NRPy+: Generate C code loops\n",
     "\n",
     "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
     "\n",
@@ -728,14 +728,14 @@
     "    with open(filename, output_type) as file:\n",
     "        file.write(\"if(*InterpCounter == \"+str(which_InterpCounter)+\") {\\n\")\n",
     "        file.write(\"    // Interpolating: \"+gf_interp_list[which_InterpCounter].gf_description+\"\\n\")\n",
-    "        file.write(loop.loop([\"i2\",\"i1\",\"i0\"],\n",
-    "                             [\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\\\n",
-    "                             [\"cctk_lsh[2]-cctk_nghostzones[2]\",\n",
-    "                              \"cctk_lsh[1]-cctk_nghostzones[1]\",\n",
-    "                              \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
-    "                             [\"1\",\"1\",\"1\"],\\\n",
-    "                             [\"#pragma omp parallel for\",\"\",\"\"],\"   \",\n",
-    "                             \"\"\"\n",
+    "        file.write(lp.loop([\"i2\",\"i1\",\"i0\"],\n",
+    "                           [\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\\\n",
+    "                           [\"cctk_lsh[2]-cctk_nghostzones[2]\",\n",
+    "                            \"cctk_lsh[1]-cctk_nghostzones[1]\",\n",
+    "                            \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
+    "                           [\"1\",\"1\",\"1\"],\\\n",
+    "                           [\"#pragma omp parallel for\",\"\",\"\"],\"   \",\n",
+    "                           \"\"\"\n",
     "/* ONLY NEEDED/USED IF CONVERTING TO SPHERICAL BASIS:\n",
     "const double Cartx = x[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + x_center;\n",
     "const double Carty = y[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + y_center;\n",
