--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -87,14 +87,14 @@
       "* R_iso    = 8.100079558158075e-01 , \n",
       "* M/R_Schw = 1.468770268913230e-01 \n",
       "\n",
-      "Single Polytrope TOV solution generated in: 0.0993649959564209 s\n",
+      "Single Polytrope TOV solution generated in: 0.08958196640014648 s\n",
       "Initial data file: outputTOVpolytrope.txt\n"
      ]
     }
    ],
    "source": [
     "# Step 1: Import needed core NRPy+ modules\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import lhrh         # NRPy+: Core C code output module\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
@@ -774,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID//interface.ccl\n"
+      "Writing NRPyPlusTOVID//interface.ccl\n"
      ]
     }
    ],
@@ -800,7 +800,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID//param.ccl\n"
+      "Writing NRPyPlusTOVID//param.ccl\n"
      ]
     }
    ],
@@ -894,7 +894,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID//schedule.ccl\n"
+      "Writing NRPyPlusTOVID//schedule.ccl\n"
      ]
     }
    ],
@@ -954,7 +954,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting NRPyPlusTOVID/src/make.code.defn\n"
+      "Writing NRPyPlusTOVID/src/make.code.defn\n"
      ]
     }
    ],
