--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -18,11 +18,7 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "[comment]: <> (Abstract: TODO)\n",
-    "\n",
-    "### NRPy+ Source Code for this module: [indexedexp.py](../edit/indexedexp.py)\n",
-    "\n",
-    "[comment]: <> (Introduction: TODO)"
+    "### NRPy+ Source Code for this module: [indexedexp.py](../edit/indexedexp.py)"
    ]
   },
   {
@@ -65,13 +61,13 @@
    "outputs": [],
    "source": [
     "# The NRPy_param_funcs module sets up global structures that manage free parameters within NRPy+\n",
-    "import NRPy_param_funcs as par \n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "# The indexedexp module defines various functions for defining and managing indexed quantities like tensors and pseudotensors\n",
-    "import indexedexp as ixp\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "# The grid module defines various parameters related to a numerical grid or the dimensionality of indexed expressions\n",
     "# For example, it declares the parameter DIM, which specifies the dimensionality of the indexed expression\n",
-    "import grid as gri\n",
-    "from outputC import *"
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "from outputC import outputC      # NRPy+: Basic C code output functionality"
    ]
   },
   {
@@ -455,7 +451,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 19, column 1)\n",
       "Created Tutorial-Indexed_Expressions.tex, and compiled LaTeX file to PDF file Tutorial-Indexed_Expressions.pdf\n"
      ]
     }
