--- a/Tutorial-MaxwellCurvilinear.ipynb
+++ b/Tutorial-MaxwellCurvilinear.ipynb
@@ -351,12 +351,12 @@
     }
    ],
    "source": [
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
-    "from outputC import *\n",
+    "import NRPy_param_funcs as par   # NRPy+: parameter interface\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
+    "from outputC import lhrh         # NRPy+: Core C code output module\n",
     "\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\", \"Spherical\")\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
