--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -116,14 +116,14 @@
    ],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
-    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
-    "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
+    "from outputC import lhrh,outCfunction # NRPy+: Core C code output module\n",
+    "import finite_difference as fin       # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par        # NRPy+: Parameter interface\n",
+    "import grid as gri                    # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp              # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm        # NRPy+: Reference metric support\n",
+    "import cmdline_helper as cmd          # NRPy+: Multi-platform Python command-line interface\n",
+    "import shutil, os, sys                # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
     "# Step P2: Create C code output directory:\n",
     "Ccodesdir = os.path.join(\"ScalarWaveCurvilinear_Playground_Ccodes/\")\n",
@@ -671,12 +671,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.8106014728546143 seconds.\n",
+      "(BENCH): Finished executing in 1.0129573345184326 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "(BENCH): Finished executing in 0.2081468105316162 seconds.\n",
+      "(BENCH): Finished executing in 27.651466131210327 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "(BENCH): Finished executing in 0.8092825412750244 seconds.\n"
+      "(BENCH): Finished executing in 110.00720238685608 seconds.\n"
      ]
     }
    ],
