--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -113,7 +113,7 @@
     "#  Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb\n",
     "\n",
     "# Step 0: Import needed Python/NRPy+ modules\n",
-    "import numpy as np                  # This module is used for math functions\n",
+    "import numpy as np                  # NumPy: A numerical methods module for Python\n",
     "import sys                          # This module is used for system related function calls\n",
     "from collections import namedtuple  # This module is used to create named tuples"
    ]
