Various modules: Code cleanup; mostly removing unused import's and variables

--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting cmdline_helper-validation.py\n"
+      "Writing cmdline_helper-validation.py\n"
      ]
     }
    ],
@@ -197,7 +197,6 @@
     "    check_executable_exists(\"gcc\")\n",
     "\n",
     "    # Step 2: Delete existing version of executable\n",
-    "    delete_string = \"\"\n",
     "    if os.name == \"nt\":\n",
     "        main_C_output_file += \".exe\"\n",
     "    delete_existing_files(main_C_output_file)\n",
@@ -567,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
