--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -274,8 +274,10 @@
     "        if gri.glb_gridfcs_list[i].name == \"H\":\n",
     "            registered_already = True\n",
     "    if not registered_already:\n",
-    "        H  = gri.register_gridfunctions(\"AUX\",\"H\")\n",
-    "        MU = ixp.register_gridfunctions_for_single_rank1(\"AUX\", \"MU\")"
+    "        # We ignore return values for register_gridfunctions...() calls below\n",
+    "        #    as they are unused.\n",
+    "        gri.register_gridfunctions(\"AUX\",\"H\")\n",
+    "        ixp.register_gridfunctions_for_single_rank1(\"AUX\", \"MU\")"
    ]
   },
   {
@@ -443,7 +445,9 @@
     "            if \"RbarDD00\" in gri.glb_gridfcs_list[i].name:\n",
     "                RbarDD_already_registered = True\n",
     "        if not RbarDD_already_registered:\n",
-    "            RbarDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"RbarDD\",\"sym01\")\n",
+    "            # We ignore the return value of ixp.register_gridfunctions_for_single_rank2() below\n",
+    "            #    as it is unused.\n",
+    "            ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"RbarDD\",\"sym01\")\n",
     "        rhs.BSSN_RHSs()\n",
     "        Bq.RicciBar__gammabarDD_dHatD__DGammaUDD__DGammaU()\n",
     "\n",
@@ -2089,12 +2093,14 @@
     "    orig_glb_gridfcs_list = []\n",
     "    for gf in gri.glb_gridfcs_list:\n",
     "        orig_glb_gridfcs_list.append(gf)\n",
-    "        \n",
-    "    alphaSphorCart   = gri.register_gridfunctions(                 \"AUXEVOL\", \"alphaSphorCart\")\n",
-    "    betaSphorCartU   = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\", \"betaSphorCartU\")\n",
-    "    BSphorCartU      = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\", \"BSphorCartU\")\n",
-    "    gammaSphorCartDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\", \"gammaSphorCartDD\", \"sym01\")\n",
-    "    KSphorCartDD     = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\", \"KSphorCartDD\", \"sym01\")\n",
+    "    \n",
+    "    # We ignore the return values for the following register_gridfunctions...() calls,\n",
+    "    #   as they are unused.\n",
+    "    gri.register_gridfunctions(                 \"AUXEVOL\", \"alphaSphorCart\")\n",
+    "    ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\", \"betaSphorCartU\")\n",
+    "    ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\", \"BSphorCartU\")\n",
+    "    ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\", \"gammaSphorCartDD\", \"sym01\")\n",
+    "    ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\", \"KSphorCartDD\", \"sym01\")\n",
     "\n",
     "    # ADM to BSSN conversion, used for converting ADM initial data into a form readable by this thorn.\n",
     "    # ADM to BSSN, Part 1: Set up function call and pointers to ADM gridfunctions\n",
