--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -159,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing IDScalarWaveNRPy/src/InitialData.c\n"
+      "Overwriting IDScalarWaveNRPy/src/InitialData.c\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing IDScalarWaveNRPy/interface.ccl\n"
+      "Overwriting IDScalarWaveNRPy/interface.ccl\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing IDScalarWaveNRPy/param.ccl\n"
+      "Overwriting IDScalarWaveNRPy/param.ccl\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing IDScalarWaveNRPy/schedule.ccl\n"
+      "Overwriting IDScalarWaveNRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -348,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing IDScalarWaveNRPy/src/make.code.defn\n"
+      "Overwriting IDScalarWaveNRPy/src/make.code.defn\n"
      ]
     }
    ],
