--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -275,10 +275,10 @@
      "output_type": "stream",
      "text": [
       "1256 1256 1256 1256 1256 1256\n",
-      "Just generated a TOV star with \n",
+      "Just generated a TOV star with\n",
       "* M        = 1.405030336771405e-01 ,\n",
-      "* R_Schw   = 9.566044579232513e-01 , \n",
-      "* R_iso    = 8.100085557410308e-01 , \n",
+      "* R_Schw   = 9.566044579232513e-01 ,\n",
+      "* R_iso    = 8.100085557410308e-01 ,\n",
       "* M/R_Schw = 1.468768334847266e-01 \n",
       "\n"
      ]
@@ -637,7 +637,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 6.445501804351807 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 6.629417896270752 seconds.\n"
      ]
     }
    ],
@@ -860,18 +860,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for BSSN RHSs in Spherical coordinates.Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "\n",
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.0783383846282959 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.07547187805175781 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Hydro_without_Hydro_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 8.425214290618896 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 8.305756330490112 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Hydro_without_Hydro_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 13.643544435501099 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 13.456477403640747 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Hydro_without_Hydro_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 26.17414140701294 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 26.345880270004272 seconds.\n"
      ]
     }
    ],
@@ -1464,16 +1464,16 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Hydro_without_Hydro_Ccodes/Hydro_without_Hydro_Playground.c -o Hydro_without_Hydro_Playground -lm`...\n",
-      "(BENCH): Finished executing in 3.8193423748016357 seconds.\n",
+      "(BENCH): Finished executing in 3.819019317626953 seconds.\n",
       "Finished compilation.\n",
-      "(BENCH) Finished in 3.8328840732574463 seconds.\n",
+      "(BENCH) Finished in 3.8328285217285156 seconds.\n",
       "\n",
       "Now running, should take ~10 seconds...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Hydro_without_Hydro_Playground 96 16 2 0.5`...\n",
-      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 6944.45 | gp/s 4.02e+06\n",
-      "(BENCH): Finished executing in 1.0155305862426758 seconds.\n",
-      "(BENCH) Finished in 1.0273501873016357 seconds.\n",
+      "\u001b[2KIt: 300 t/M=1.77 dt/M=5.90e-03 | 98.4%; ETA 0 s | t/M/h 7416.53 | gp/s 4.29e+06\n",
+      "(BENCH): Finished executing in 1.0142765045166016 seconds.\n",
+      "(BENCH) Finished in 1.0262541770935059 seconds.\n",
       "\n"
      ]
     }
@@ -1783,9 +1783,9 @@
       "Now running, should take ~10 seconds...\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Hydro_without_Hydro_Playground 48 8 2 0.5`...\n",
-      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 87899.08 | gp/s 3.18e+06\n",
-      "(BENCH): Finished executing in 0.21449565887451172 seconds.\n",
-      "(BENCH) Finished in 0.22567129135131836 seconds.\n"
+      "\u001b[2KIt: 70 t/M=1.65 dt/M=2.36e-02 | 92.1%; ETA 0 s | t/M/h 85726.73 | gp/s 3.10e+06\n",
+      "(BENCH): Finished executing in 0.21488618850708008 seconds.\n",
+      "(BENCH) Finished in 0.22977852821350098 seconds.\n"
      ]
     }
    ],
