--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
@@ -788,12 +788,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BlackHoleID_Ccodes/Initial_Data_Playground.c -o Initial_Data_Playground -lm`...\n",
-      "(BENCH): Finished executing in 1.8116533756256104 seconds.\n",
+      "(BENCH): Finished executing in 1.8113071918487549 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Initial_Data_Playground 96 96 96`...\n",
-      "(BENCH): Finished executing in 0.21006560325622559 seconds.\n",
+      "(BENCH): Finished executing in 0.21004557609558105 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Initial_Data_Playground 48 48 48`...\n",
-      "(BENCH): Finished executing in 0.20941758155822754 seconds.\n"
+      "(BENCH): Finished executing in 0.20870685577392578 seconds.\n"
      ]
     }
    ],
@@ -829,8 +829,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: scipy in /home/zetienne/jup38/lib/python3.8/site-packages (1.4.1)\r\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/zetienne/jup38/lib/python3.8/site-packages (from scipy) (1.18.4)\r\n"
+      "Requirement already satisfied: scipy in /home/zetienne/jup38/lib/python3.8/site-packages (1.4.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/zetienne/jup38/lib/python3.8/site-packages (from scipy) (1.18.4)\n"
      ]
     }
    ],
