--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -322,7 +322,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "(BENCH) Finished BSSN symbolic expressions in 3.770317554473877 seconds.\n"
+      "(BENCH) Finished BSSN symbolic expressions in 3.783964157104492 seconds.\n"
      ]
     }
    ],
@@ -542,20 +542,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in Spherical coordinates.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs in Spherical coordinates.Generating C code for Ricci tensor in Spherical coordinates.Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "(BENCH) Finished gamma constraint C codegen in 0.10916757583618164 seconds.\n",
-      "(BENCH) Finished BL initial data codegen in 7.3176350593566895 seconds.\n",
+      "(BENCH) Finished gamma constraint C codegen in 0.10707545280456543 seconds.\n",
+      "(BENCH) Finished BL initial data codegen in 7.333363056182861 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "(BENCH) Finished BSSN_RHS C codegen in 8.83189058303833 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen in 8.862776041030884 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "(BENCH) Finished Ricci C codegen in 13.367599725723267 seconds.\n",
+      "(BENCH) Finished Ricci C codegen in 13.564157009124756 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "(BENCH) Finished Hamiltonian C codegen in 26.71885061264038 seconds.\n"
+      "(BENCH) Finished Hamiltonian C codegen in 26.5912766456604 seconds.\n"
      ]
     }
    ],
@@ -1078,14 +1078,14 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "(BENCH): Finished executing in 4.016282081604004 seconds.\n",
+      "(BENCH): Finished executing in 3.8163206577301025 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 18145.43 | gp/s 2.56e+06\n",
-      "(BENCH): Finished executing in 1.6126563549041748 seconds.\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 28180.08 | gp/s 3.97e+06\n",
+      "(BENCH): Finished executing in 1.0119364261627197 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 8836.40 | gp/s 3.93e+06\n",
-      "(BENCH): Finished executing in 3.2146787643432617 seconds.\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 9105.08 | gp/s 4.05e+06\n",
+      "(BENCH): Finished executing in 3.016103744506836 seconds.\n",
       "(BENCH) Finished this code cell.\n"
      ]
     }
