--- a/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
+++ b/Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb
@@ -159,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting finite_difference_playground.c\n"
+      "Writing finite_difference_playground.c\n"
      ]
     }
    ],
@@ -268,10 +268,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops finite_difference_playground.c -o fdp -lm`...\n",
-      "(BENCH): Finished executing in 0.21106290817260742 seconds.\n",
+      "(BENCH): Finished executing in 0.20954203605651855 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./fdp `...\n",
-      "(BENCH): Finished executing in 0.20946121215820312 seconds.\n"
+      "(BENCH): Finished executing in 0.2076411247253418 seconds.\n"
      ]
     }
    ],
