--- a/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
+++ b/Tutorial-Start_to_Finish-FishboneMoncriefID_standalone.ipynb
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/FM_standalone.c\n"
+      "Writing FishboneMoncriefID/FM_standalone.c\n"
      ]
     }
    ],
@@ -180,19 +180,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-29 10:07:52--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\r\n",
-      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\r\n",
-      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 16445 (16K) [text/csv]\r\n",
-      "Saving to: ‘torus_cuts.csv’\r\n",
-      "\r\n",
-      "\r",
-      "torus_cuts.csv        0%[                    ]       0  --.-KB/s               \r",
-      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.009s  \r\n",
-      "\r\n",
-      "2020-05-29 10:07:52 (1.78 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\r\n",
-      "\r\n"
+      "--2020-05-30 22:34:10--  http://astro.phys.wvu.edu/zetienne/torus_cuts.csv\n",
+      "Resolving astro.phys.wvu.edu (astro.phys.wvu.edu)... 157.182.3.45\n",
+      "Connecting to astro.phys.wvu.edu (astro.phys.wvu.edu)|157.182.3.45|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 16445 (16K) [text/csv]\n",
+      "Saving to: ‘torus_cuts.csv’\n",
+      "\n",
+      "torus_cuts.csv      100%[===================>]  16.06K  --.-KB/s    in 0.01s   \n",
+      "\n",
+      "2020-05-30 22:34:10 (1.51 MB/s) - ‘torus_cuts.csv’ saved [16445/16445]\n",
+      "\n"
      ]
     },
     {
